[package]
name = "tidext-decoder"
version = "0.1.0"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
sp-runtime = { git = "https://github.com/tidelabs/substrate", branch = "tidechain"}
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain"}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3" }
thiserror = "1.0"
log = "0.4"
hex = "0.4"
frame-metadata = { version = "15", features = ["v14", "std"]}
scale-value = { git = "https://github.com/paritytech/scale-value", features = [ "serde" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev" }
