[package]
name = "tidext"
version = "0.7.0"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[features]
default = [ "production", "lagoon-native" ]
production = ["keyring-stronghold", "tidechain-native"]
dev = [ "keyring-dev", "lagoon-native" ]
keyring-stronghold = [ "iota_stronghold" ]
keyring-dev = [ "sp-keyring" ]
test = ["which", "env_logger", "sp-keyring"]
decoder = [ "subxt/decoder" ]
tidechain-native = [ "tidext-macro/tidechain-native" ]
lagoon-native = [ "tidext-macro/lagoon-native" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
thiserror = "1.0"
log = "0.4"
futures = "0.3"
hex = "0.4"
num-bigint = "0.4.2"
async-trait = "0.1.40"
parity-scale-codec = { version = "3" }

# Internal fork of `subxt` with few patches, branched for better `diff` and cherry picking
subxt = { git = "https://github.com/tidelabs/subxt", branch = "tidechain"}
subxt-macro = { git = "https://github.com/tidelabs/subxt", branch = "tidechain"}

sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain"}
sp-keyring = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sp-runtime = { git = "https://github.com/tidelabs/substrate", branch = "tidechain"}
frame-support = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

# Primitives
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev" }

# Stronghold
iota_stronghold = { git = "https://github.com/tidelabs/stronghold.rs", branch = "dev", optional = true }

# test module dependencies
which = { version = "4.2.2", optional = true }
env_logger = { version = "0.8.3", optional = true }

tidext-macro = { path = "../macro" }

[dev-dependencies]
tidext = { path = ".", features = ["test"] }
tokio = { version = "1", features = [ "full" ], default-features = false }
sp-keyring = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain"}
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
