[package]
edition = "2021"
name = "nodejs-tidext"
version = "0.0.0"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tidext = { path = "../../tidext" }
zeroize = "1.5"
iota-crypto = { git = "https://github.com/tidelabs/crypto.rs", branch = "dev", features = [ "hmac", "sha", "pbkdf" ] }
# Primitives
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.4", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.0.8"

[build-dependencies]
napi-build = "1.2.1"
