[package]
name = "python-tidext"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Nogueira <lucas.nogueira@semantic-network.com>"]

[lib]
name = "tidext"
crate-type = ["cdylib"]
doc = false

[dependencies]
tidext = { path = "../../tidext" }
actix = "0.12"
zeroize = "1.5"
iota-crypto = { git = "https://github.com/tide-labs/crypto.rs", branch = "dev", features = [ "hmac", "sha", "pbkdf" ] }
futures = "0.3"
# Primitives
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", branch = "dev" }
pyo3 = { version = "0.15", features = ["extension-module"] }
pyo3-asyncio = { version = "0.15", features = ["attributes", "tokio-runtime"] }
