[package]
name = "python-tidext"
version = "0.1.0"
edition = "2021"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]

[lib]
name = "tidext"
crate-type = ["cdylib"]
doc = false

[dependencies]
tidext = { path = "../../tidext" }
zeroize = "1.5"
hex = "0.4"
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
iota-crypto = { git = "https://github.com/tidelabs/crypto.rs", branch = "dev", features = [ "hmac", "sha", "pbkdf" ] }
futures = "0.3"
# Primitives
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev" }
pyo3 = { version = "0.15", features = ["extension-module"] }
pyo3-asyncio = { version = "0.15", features = ["attributes", "tokio-runtime"] }
